deploy/k8s/overlays/ocp-single/delete-ns-credentials.yaml
$patch: delete
apiVersion: v1
kind: Namespace
metadata: { name: moca-credentials }
