deploy/k8s/overlays/ocp-single/delete-pol-moca-deny.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: { name: default-deny, namespace: moca }
