deploy/k8s/overlays/ocp-single/delete-pol-sandbox-dns.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: { name: allow-dns, namespace: moca-sandbox }
